--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>TREINAMENTO PABE: Práticas, Atitude e Bem-Estar</title>
+    <title>TREINAMENTO PABE: Práticas > Atitude > Bem-Estar</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <style>
         /* Cores Neutras e Profissionais para PABE */
@@ -338,7 +338,7 @@
 
 <header>
     <div class="container">
-        <h1>TREINAMENTO PABE<span>Práticas, Atitude e Bem-Estar</span></h1>
+        <h1>TREINAMENTO PABE<span>Práticas &gt; Atitude &gt; Bem-Estar</span></h1>
     </div>
 </header>
 
